--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "@apollo/client": "^3.3.16",
     "@babel/runtime": "^7.13.10",
     "graphql": "^15.5.0",
+    "node-gyp": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
