--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "nodemon --exec ts-node index.ts"
   },
   "dependencies": {
+    "apollo-server": "^2.24.0",
     "apollo-server-express": "^2.24.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
